--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
 
     <groupId>codehall</groupId>
     <artifactId>codehall</artifactId>
-    <version>1.0.0-Alpha-1</version>
+    <version>1.0.0-Alpha-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>CodeHall Maven Parent</name>
     <description>Maven parent for this enterprises' projects</description>
+    <url>https://github.com/codehall/maven-parent</url>
 
     <developers>
         <developer>
@@ -29,5 +30,138 @@
         <name>CodeHall</name>
         <url>http://codehall.github.io</url>
     </organization>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <maven.plugin.clean.version>2.6.1</maven.plugin.clean.version>
+        <maven.plugin.install.version>2.5.2</maven.plugin.install.version>
+        <maven.plugin.site.version>3.4</maven.plugin.site.version>
+        <maven.plugin.deploy.version>2.8.2</maven.plugin.deploy.version>
+        <maven.plugin.dependency.version>2.9</maven.plugin.dependency.version>
+        <maven.plugin.enforcer.version>1.3.1</maven.plugin.enforcer.version>
+    </properties>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${maven.plugin.clean.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${maven.plugin.install.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${maven.plugin.site.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${maven.plugin.deploy.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven.plugin.dependency.version}</version>
+                <executions>
+                    <execution>
+                        <id>show-dependency-tree</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>tree</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify-dependencies</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>analyze-dep-mgt</goal>
+                            <goal>analyze-only</goal>
+                            <goal>analyze-duplicate</goal>
+                        </goals>
+                        <configuration>
+                            <failBuild>true</failBuild>
+                            <ignoreDirect>false</ignoreDirect>
+                            <failOnWarning>true</failOnWarning>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven.plugin.enforcer.version}</version>
+                <configuration>
+                    <failFast>true</failFast>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>enforce</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.0.4</version>
+                                </requireMavenVersion>
+                                <!-- <requireJavaVersion>
+                                    <version>1.8.0-25</version>
+                                </requireJavaVersion> -->
+                                <requireReleaseDeps>
+                                    <message>This RELEASE depends on SNAPSHOT dependencies!</message>
+                                    <onlyWhenRelease>true</onlyWhenRelease>
+                                </requireReleaseDeps>
+                                <requirePluginVersions>
+                                    <message>Best Practice is to always define plugin versions!</message>
+                                </requirePluginVersions>
+                                <requireProperty>
+                                    <property>project.build.sourceEncoding</property>
+                                </requireProperty>
+                                <DependencyConvergence />
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>${maven.plugin.enforcer.version}</version>
+                        <configuration>
+                            <failFast>true</failFast>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>enforce-valid-release</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireReleaseVersion>
+                                            <message>Version ${project.version} is not allowed for a RELEASE</message>
+                                        </requireReleaseVersion>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
