--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>codehall</groupId>
     <artifactId>codehall</artifactId>
-    <version>1.0.0-Alpha-1-SNAPSHOT</version>
+    <version>1.0.0-Alpha-1</version>
     <packaging>pom</packaging>
 
     <name>CodeHall Maven Parent</name>
@@ -34,12 +34,18 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <maven.minversion>3.0.4</maven.minversion>
+
         <maven.plugin.clean.version>2.6.1</maven.plugin.clean.version>
         <maven.plugin.install.version>2.5.2</maven.plugin.install.version>
         <maven.plugin.site.version>3.4</maven.plugin.site.version>
         <maven.plugin.deploy.version>2.8.2</maven.plugin.deploy.version>
         <maven.plugin.dependency.version>2.9</maven.plugin.dependency.version>
         <maven.plugin.enforcer.version>1.3.1</maven.plugin.enforcer.version>
+        <maven.plugin.compiler.version>3.2</maven.plugin.compiler.version>
+        <maven.plugin.surefire.version>2.18</maven.plugin.surefire.version>
+        <maven.plugin.jar.version>2.5</maven.plugin.jar.version>
+        <maven.plugin.resources.version>2.7</maven.plugin.resources.version>
     </properties>
 
     <build>
@@ -61,12 +67,35 @@
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>${maven.plugin.deploy.version}</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${maven.plugin.dependency.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>${maven.plugin.enforcer.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.plugin.compiler.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.plugin.surefire.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven.plugin.jar.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${maven.plugin.resources.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven.plugin.dependency.version}</version>
                 <executions>
                     <execution>
                         <id>show-dependency-tree</id>
@@ -93,7 +122,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven.plugin.enforcer.version}</version>
                 <configuration>
                     <failFast>true</failFast>
                 </configuration>
@@ -107,7 +135,7 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>3.0.4</version>
+                                    <version>${maven.minversion}</version>
                                 </requireMavenVersion>
                                 <!-- <requireJavaVersion>
                                     <version>1.8.0-25</version>
@@ -122,6 +150,7 @@
                                 <requireProperty>
                                     <property>project.build.sourceEncoding</property>
                                 </requireProperty>
+                                <requireUpperBoundDeps />
                                 <DependencyConvergence />
                             </rules>
                         </configuration>
@@ -133,6 +162,7 @@
 
     <profiles>
         <profile>
+            <!-- I'm not certain about this.. -->
             <id>release</id>
             <build>
                 <plugins>
@@ -152,7 +182,9 @@
                                 <configuration>
                                     <rules>
                                         <requireReleaseVersion>
-                                            <message>Version ${project.version} is not allowed for a RELEASE</message>
+                                            <message>
+                                                Version ${project.version} is not allowed for a RELEASE
+                                            </message>
                                         </requireReleaseVersion>
                                     </rules>
                                 </configuration>
