--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>codehall</groupId>
     <artifactId>codehall</artifactId>
-    <version>1.0.0-Alpha-1</version>
+    <version>1.0.0-Alpha-1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>CodeHall Maven Parent</name>
