secure-build profile created

--- a/pom.xml
+++ b/pom.xml
@@ -110,90 +110,100 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>show-dependency-tree</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>tree</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>verify-dependencies</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>analyze-dep-mgt</goal>
-                            <goal>analyze-only</goal>
-                            <goal>analyze-duplicate</goal>
-                        </goals>
-                        <configuration>
-                            <failBuild>true</failBuild>
-                            <ignoreDirect>false</ignoreDirect>
-                            <failOnWarning>true</failOnWarning>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <configuration>
-                    <failFast>true</failFast>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>verify-environment</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>${maven.minversion}</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-build-stability</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireProperty>
-                                    <property>project.build.sourceEncoding</property>
-                                </requireProperty>
-                                <requirePluginVersions>
-                                    <message>Best Practice is to always define plugin versions!</message>
-                                </requirePluginVersions>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>verify-dependencies</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireReleaseDeps>
-                                    <message>This RELEASE depends on SNAPSHOT dependencies!</message>
-                                    <onlyWhenRelease>true</onlyWhenRelease>
-                                </requireReleaseDeps>
-                                <requireUpperBoundDeps />
-                                <DependencyConvergence />
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>secure-build</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>show-dependency-tree</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>tree</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>verify-dependencies</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <!-- <goal>analyze-dep-mgt</goal> -->
+                                    <goal>analyze-duplicate</goal>
+                                </goals>
+                                <configuration>
+                                    <failBuild>true</failBuild>
+                                    <ignoreDirect>false</ignoreDirect>
+                                    <failOnWarning>true</failOnWarning>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <configuration>
+                            <failFast>true</failFast>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>verify-environment</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireMavenVersion>
+                                            <version>${maven.minversion}</version>
+                                        </requireMavenVersion>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>enforce-build-stability</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireProperty>
+                                            <property>project.build.sourceEncoding</property>
+                                        </requireProperty>
+                                        <requirePluginVersions>
+                                            <message>Best Practice is to always define plugin versions!</message>
+                                        </requirePluginVersions>
+                                    </rules>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>verify-dependencies</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <requireReleaseDeps>
+                                            <message>This RELEASE depends on SNAPSHOT dependencies!</message>
+                                            <onlyWhenRelease>true</onlyWhenRelease>
+                                        </requireReleaseDeps>
+                                        <requireUpperBoundDeps />
+                                        <DependencyConvergence />
+                                    </rules>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
